# Predictor

./: .env.example  .gitignore  AI_ASSISTANT_SETUP.md  AI_CONVERSATION_PERSISTENCE.md  AI_PORTFOLIO_ASSISTANT_ADVISORY_MODE.md  AI_RECOMMENDATIONS_IMPLEMENTATION.md  AI_TOOL_USAGE_GUIDE.md  BEDROCK_MIGRATION_GUIDE.md  CASH_MANAGEMENT_FIXES.md  CLAUDE.md  CODE_QUALITY_GUIDE.md  CODE_REVIEW_REPORT.md  CONNECTION_LEAK_FIX_SUMMARY.md  CONNECTION_POOL_USAGE_EXAMPLE.md  DATABASE_CONNECTION_POOL_REFACTORING_PLAN.md  DQNAgent.py  FIFO_COST_BASIS_IMPLEMENTATION.md  IMPORT_ERROR_FIX.md  LLM_CONSISTENCY_RECOMMENDATIONS.md  LLM_CONVERSATION_USAGE_GUIDE.md  PORTFOLIO_CLI_REFACTORING_EXAMPLE.md  PORTFOLIO_DAO_CODE_REVIEW.md  PORTFOLIO_RECALCULATION_OPTIMIZATION.md  QUICK_START_RECOMMENDATIONS.md  README.md  TECHNICAL_INDICATORS_PRECALCULATION.md  TICKER_ADDITION_FIX.md  TradingEnv.py  UNIT_TEST_CONNECTION_POOL_MIGRATION.md  UNIVERSAL_VALUE_SERVICE_UPDATES.md  WATCHLIST_AI_INTEGRATION.md  YFinance_Rate_Limiting_Fixes.md  YFinance_Rate_Limiting_Fixes_Extended.md  cash_management_test.py  celanse_activity.csv  check_code.sh  enhanced_cli.py  filter_history.py  fix_imports.sh  ford_activity.csv  (+29 more)
chroma_db/: chroma.sqlite3
data/: __init__.py  ai_recommendations_dao.py  base_dao.py  bollinger_bands.py  comprehensive_performance_formatter.py  config.py  conversation_history_dao.py  data_retrieval_consolidated.py  data_retrival.py  data_retrival_improved.py  fifo_cost_basis_calculator.py  fundamental_data_dao.py  llm_integration.py  llm_portfolio_analyzer.py  llm_tool_definitions.py  macd.py  (+18 more)
(+78 files in other folders)
